--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="#"><button class="headerbutton">Sign Up</button></a>
+              <a class="nav-link" href="signup.html"><button class="headerbutton">Sign Up</button></a>
           </li>
           <li class="nav-item">
               <a class="nav-link" href="#">About</a>
