Forget pw added

--- a/forgetpw.html
+++ b/forgetpw.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Login Your Account</title>
+	<title>Recover your password</title>
 	<meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   	
@@ -25,46 +25,29 @@
 			<div class="wrap-login100">
 				<div class="login100-form-title" style="background-image: url(login/images/bg-1.png);">
 					<span class="login100-form-title-1">
-						Sign In
+						Recover Password
 					</span>
 				</div>
 
 				<form class="login100-form validate-form">
+
 					<div class="wrap-input100 validate-input m-b-26" data-validate="Username is required">
 						<span class="label-input100">Email</span>
 						<input class="input100" type="email" name="email" placeholder="Enter email address">
 						<span class="focus-input100"></span>
 					</div>
 
-					<div class="wrap-input100 validate-input m-b-18" data-validate = "Password is required">
-						<span class="label-input100">Password</span>
-						<input class="input100" type="password" name="pass" placeholder="Enter password">
-						<span class="focus-input100"></span>
-					</div>
 
-					<div class="flex-sb-m w-full p-b-30">
-						<!--<div class="contact100-form-checkbox">
-							<input class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me">
-							<label class="label-checkbox100" for="ckb1">
-								Remember me
-							</label>
-						</div>-->
-						<div>
-								<a href="signup.html" class="txt1">
-									Create Account
-								</a>
-							</div>
-						<div>
-							<a href="forgetpw.html" class="txt1">
-								Forgot Password?
-							</a>
-						</div>
-					</div>
+          <div class="wrap-input100 validate-input m-b-26" data-validate="Username is required">
+              <span class="label-input100">Number</span>
+              <input class="input100" type="text" name="mobile_number" placeholder="Enter mobile number">
+              <span class="focus-input100"></span>
+          </div>
 					
 
 					<div class="container-login100-form-btn">
 						<button class="login100-form-btn">
-							Login
+							Submit
 						</button>
 					</div>
 				</form>
